# min-2d-engine

./: .gitignore  CMakeLists.txt  README.md  engine2d
include/: world.h
include/engine/: world.h
include/engine/math/: line.h  matrix.h  polygon.h  rect.h  triangle.h  vector.h
include/engine/objects/: object.h
include/engine/utils/: tostrs.h  view.h
include/math/: line.h  polygon.h  rect.h  triangle.h  vector.h
include/misc/: typedefs.h
include/objects/: object.h
include/utils/: view.h
src/: main.cpp
src/engine/math/: polygon.cpp  triangle.cpp
src/math/: polygon.cpp  triangle.cpp
